lb.yml
apiVersion: v1
kind: Service
metadata:
  name: express-svc-lb
  namespace: express
spec:
  selector:
    app: express
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
