service-2.yml
apiVersion: v1
kind: Service
metadata:
  name: express-svc-2
  namespace: express
spec:
  #type: NodePort
  selector:
    app: express-2
  ports:
    - port: 3001
      targetPort: 3000
      #nodePort: 30001
