service.yml
apiVersion: v1
kind: Service
metadata:
  name: express-svc
  namespace: express
spec:
  #type: NodePort
  selector:
    app: express
  ports:
    - port: 3000
      targetPort: 3000
      #nodePort: 30000
