ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-ingress
spec:
  rules:
    - host: www.app.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: express-svc
                port:
                  number: 3000
            
          - path: /page1
            pathType: Prefix
            backend:
              service:
                name: express-svc-2
                port:
                  number: 3001
