networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkp
  namespace: express
spec:
  podSelector:
    matchLabels:
      app: express
  policyTypes:
    - Ingress
      
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: busybox1
